Change JwtAuthFilter (Add role variable)